Corrected collapse animation

--- a/public_html/layouts/basic/styles/_Style.scss
+++ b/public_html/layouts/basic/styles/_Style.scss
@@ -1794,11 +1794,6 @@ textarea.col-md-11 {
 	max-width: 220px;
 }
 
-.fieldInfo.in {
-	overflow: visible !important;
-	height: auto !important;
-}
-
 .moduleSelection {
 	border-radius: 2px 2px 0 0 !important;
 	border: 1px solid #ddd !important;
